# free-transformer

./: .gitignore  README.md  pyproject.toml
configs/: dev_tinystories.yaml  ft124m_fineweb.yaml  smoke.yaml
docs/: free-bits.html  index.html  latent.html
paper/: RESEARCH_LOG.md  probe_dev_k0.5_s1.json  probe_ft124m_free_k0.5_s2.json  probe_ft124m_free_k1_s1.json  probe_ft124m_free_k1_s3.json  results_all.json  results_local.json
scripts/: arc_window.sh  b70_sweep_entry.sh  eval_prior.py  eval_xpu.sh  make_figures.py  make_figures_p2.py  prepare_fineweb.py  prepare_tinystories.py  probe_latent.py  run_xpu_124m.sh  sweep_dev.sh  train.py
src/free_transformer/: __init__.py  config.py  data.py  latent.py  layers.py  model.py  rope.py  training.py
tests/: test_model.py
